crates/ox_content_napi/src/tests/snapshots/generate_docs_markdown_renders_type_alias_function_metadata.snap
---
source: crates/ox_content_napi/src/tests.rs
---
===== default/index.md =====
# default

_2 symbols · 2 types · 1 parameters · 1 returns_

## Type Aliases

- [CommandContext](./type-aliases/CommandContext.md)
- [CommandRunner](./type-aliases/CommandRunner.md) - Run a command.

===== default/type-aliases/CommandContext.md =====
# Type Alias: CommandContext

## Signature

```ts
export type CommandContext = unknown
```
===== default/type-aliases/CommandRunner.md =====
# Type Alias: CommandRunner

Run a command.

## Signature

```ts
export type CommandRunner<G> = (ctx: Readonly<CommandContext<G>>) => Awaitable<string | void>
```

## Parameters

| Name | Type | Description |
| --- | --- | --- |
| `ctx` | `Readonly`\<[`CommandContext`](./CommandContext.md)\<`G`\>\> |  |

## Returns

`Awaitable<string | void>` — CLI output.
===== index.md =====
# API Documentation

Generated by [Ox Content](https://github.com/ubugeeei-prod/ox-content)

_1 modules · 2 symbols · 2 types · 1 parameters · 1 returns_

## Modules

- [default](./default/index.md)
