crates/ox_content_napi/src/tests/snapshots/generate_docs_markdown_renders_type_alias_return_without_description.snap
---
source: crates/ox_content_napi/src/tests.rs
---
===== default/index.md =====
# default

_1 symbols · 1 types · 2 parameters · 1 returns_

## Type Aliases

- [OnPluginExtension](./type-aliases/OnPluginExtension.md) - Plugin extension hook.

===== default/type-aliases/OnPluginExtension.md =====
# Type Alias: OnPluginExtension

Plugin extension hook.

## Signature

```ts
export type OnPluginExtension<G> = (ctx: Readonly<CommandContext<G>>, cmd: Readonly<Command<G>>) => Awaitable<void>
```

## Parameters

| Name | Type | Description |
| --- | --- | --- |
| `ctx` | `Readonly<CommandContext<G>>` | The command context. |
| `cmd` | `Readonly<Command<G>>` | The command. |

## Returns

`Awaitable<void>`
===== index.md =====
# API Documentation

Generated by [Ox Content](https://github.com/ubugeeei-prod/ox-content)

_1 modules · 1 symbols · 1 types · 2 parameters · 1 returns_

## Modules

- [default](./default/index.md)
