crates/ox_content_napi/src/tests/snapshots/generate_docs_markdown_renders_type_parameters.snap
---
source: crates/ox_content_napi/src/tests.rs
---
===== default/functions/make.md =====
# Function: make()

Make a thing.

## Signature

```ts
export function make<G>(): G
```

## Type Parameters

- `G` *extends* `Base` = `Default` - The thing type.
===== default/index.md =====
# default

_1 symbols · 1 functions_

## Functions

- [make](./functions/make.md) - Make a thing.

===== index.md =====
# API Documentation

Generated by [Ox Content](https://github.com/ubugeeei-prod/ox-content)

_1 modules · 1 symbols · 1 functions_

## Modules

- [default](./default/index.md)
