crates/ox_content_napi/src/tests/snapshots/generate_docs_markdown_type_declaration_format_table_renders_html.snap
---
source: crates/ox_content_napi/src/tests.rs
---
===== default/functions/resolveArgs.md =====
# Function: resolveArgs()

<div id="resolveargs" class="ox-api-entry ox-api-entry--page">
<span class="ox-api-entry__meta"><span class="ox-api-badge">returns object</span></span>
<div class="ox-api-entry__prose">
<p>Resolve.</p>
</div>
<div class="ox-api-entry__section ox-api-entry__section--signature">
<h4>Signature</h4>
<pre><code class="language-typescript">export function resolveArgs(): object</code></pre>
</div>
<div class="ox-api-entry__section ox-api-entry__section--returns">
<h4>Returns</h4>
<div class="ox-api-entry__return">
  <code class="ox-api-entry__return-type">object</code>
  <p class="ox-api-entry__return-description">Resolved args.</p>
<table class="ox-api-entry__type-declaration-table"><thead><tr><th>Name</th><th>Type</th><th>Description</th></tr></thead><tbody>
<tr>
  <td><code>values</code></td>
  <td><code class="ox-api-entry__member-type language-typescript"><a href="../type-aliases/ArgValues.md">ArgValues</a>&lt;A&gt;</code></td>
  <td><div class="ox-api-entry__member-description">Resolved values.</div></td>
</tr>
</tbody></table>
</div>
</div>
</div>
===== default/index.md =====
# default

<div class="ox-api-stats" aria-label="API reference summary">
<span class="ox-api-stat">
  <strong>2</strong>
  <span>symbols</span>
</span>
<span class="ox-api-stat">
  <strong>1</strong>
  <span>functions</span>
</span>
<span class="ox-api-stat">
  <strong>1</strong>
  <span>types</span>
</span>
<span class="ox-api-stat">
  <strong>1</strong>
  <span>returns</span>
</span>
</div>

## Functions

| Function | Description |
| ------ | ------ |
| [resolveArgs](./functions/resolveArgs.md) | Resolve. |

## Type Aliases

| Type Alias | Description |
| ------ | ------ |
| [ArgValues](./type-aliases/ArgValues.md) |  |

===== default/type-aliases/ArgValues.md =====
# Type Alias: ArgValues

<div id="argvalues" class="ox-api-entry ox-api-entry--page">
<div class="ox-api-entry__section ox-api-entry__section--signature">
<h4>Signature</h4>
<pre><code class="language-typescript">export type ArgValues = unknown</code></pre>
</div>
</div>
===== index.md =====
# API Documentation

Generated by [Ox Content](https://github.com/ubugeeei-prod/ox-content)

<div class="ox-api-stats" aria-label="API reference summary">
<span class="ox-api-stat">
  <strong>1</strong>
  <span>modules</span>
</span>
<span class="ox-api-stat">
  <strong>2</strong>
  <span>symbols</span>
</span>
<span class="ox-api-stat">
  <strong>1</strong>
  <span>functions</span>
</span>
<span class="ox-api-stat">
  <strong>1</strong>
  <span>types</span>
</span>
<span class="ox-api-stat">
  <strong>1</strong>
  <span>returns</span>
</span>
</div>

## Modules

- [default](./default/index.md)
